5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_1801.log
== SUBMITION (2019-04-02 00:15:10) 
-- CODE:
o = input("Objeto: ")
n = int(input("Quantas vezes: "))

print(n*("abra " + o + " "))
-- EXECUTION TIME:
0.189833
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Objeto: Quantas vezes: abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Objeto: Quantas vezes: abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:15:11) 
-- CODE:
o = input("Objeto: ")
n = int(input("Quantas vezes: "))

print(n*("abra " + o + " "))
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:15:56) 
-- CODE:
o = input("Objeto: ")
n = int(input("Quantas vezes: "))
print(n*("abra " + o + " "))
-- EXECUTION TIME:
0.138058
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:16:36) 
-- CODE:
o = input("Objeto: ")
n = int(input("Quantas vezes: "))
print (n* ("Abra " + o + " " ))
-- EXECUTION TIME:
0.145645
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:59:46) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("abra"+ o + " ")
# Saida
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    feitico = num* ("abra"+ o + " ")
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:59:56) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("abra"+ o + " ")
# Saida
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    feitico = num* ("abra"+ o + " ")
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:00:45) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra" + o + " ")
# Saida
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    feitico = num* ("Abra" + o + " ")
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:01:14) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra" + nome + " ")
# Saida
print(feitico)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:01:34) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra " + nome + " ")
# Saida
print(feitico)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:01:52) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra " + nome +)
# Saida
print(feitico)
-- ERROR:
File "XXXX", line 5
    feitico = num* ("Abra " + nome +)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:02:01) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra " + nome + "")
# Saida
print(feitico)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:02:13) 
-- CODE:
# Entradas
nome = input("Determine: ").lower()
num = int(input("Determine: "))
# Variavel
feitico = num* ("Abra " + nome + " ")
# Saida
print(feitico)
-- EXECUTION TIME:
0.166655
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
